Resolved footer spacing issues

--- a/style.css
+++ b/style.css
@@ -13,18 +13,51 @@ header {
 
 footer {
     display: flex;
-    align-items: center;
-    position:fixed;
-    height: 50px;
+    min-width: 100%;
+    position: absolute;
     bottom: 0;
     left: 0;
-    background-color: lightgray;
+    background-color: rgb(236, 231, 231);
 }
 
 a {
     color: gray;
     text-decoration: none;
 }
+
+a:hover {
+    text-decoration: underline;
+}
+
+.left-links {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.right-links {
+    display: flex;
+    flex-grow: 1;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 20px;
+}
+
+.center-links {
+    display: flex;
+    justify-content: center;
+}
+
+.footer-links {
+    margin: 0px 15px 0px 15px;
+    color: rgb(83, 80, 80);
+}
+
+.footer-text {
+    color: rgb(107, 102, 102);
+}
+
 
 .header-buttons-container {
     display: flex;
@@ -36,16 +69,12 @@ a {
     flex-shrink: 1;
     margin-top: 15px;
     margin-left: 30px;
-    justify-content: flex-start;
-    flex-direction: row;
 }
 
 .top-right-links {
-    margin-right: 1%;
     display: flex;
     flex-grow: 2;
     justify-content: flex-end;
-    flex-direction: row;
     margin-top: 20px;
     margin-right: 30px;
 }
@@ -82,17 +111,16 @@ a {
 }
 
 .logo-container {
-    margin: 275px 0% 20px 0%;
+    margin: 257px 0% 20px 0%;
 }
 
 .logo-image {
-    max-height: 350px;
-    max-width: 200px;
+    margin-bottom: 25px;
 }
 
 .search-container {
+    max-width: 100px;
     display: flex;
-    max-width: 500px;
 }
 
 .search-icon {
@@ -104,8 +132,9 @@ a {
     border-style:solid;
     border-radius: 20px;
     min-width: 600px;
-    min-height: 45px;
-    border-color: whitesmoke;
+    min-height: 50px;
+    border-color: rgba(218, 218, 218, 0.8);
+    border-width: thin;
     box-shadow: none;
     padding-left: 40px;
 }
@@ -120,9 +149,15 @@ a {
     display: flex;
 }
 
-input[type="submit"] {
-        box-shadow: none;
+input[type="image"]:hover {
     background-color: whitesmoke;
+    cursor: pointer;
+    user-select: none;
+}
+
+input[type="submit"] {
+    box-shadow: none;
+    background-color: rgb(245, 245, 248);
     border: 1px solid #f8f9fa;
     border-radius: 4px;
     color: #3c4043;
@@ -133,9 +168,7 @@ input[type="submit"] {
     line-height: 27px;
     height: 36px;
     min-width: 54px;
-    text-align: center;
     cursor: pointer;
-    user-select: none;
 }
 
 input[type="submit"]:hover {
@@ -145,23 +178,9 @@ input[type="submit"]:hover {
     color: #202124;
 }
 
-.left-bottom-links {
-    display: flex;
-    align-items: flex-start;
-    flex-grow: 1;
-    background-color: lightpink;
-}
-
-#footer-note {
-    display: flex;
-    flex-shrink: 1;
-    background-color:lightgoldenrodyellow;
-}
-
-.right-bottom-links {
-    display: flex;
-    flex-grow: 2;
-    background-color: lightblue;
+input[type="search"]:focus {
+    box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+    outline: none;
 }
 
 
